objects/Order_Header__c.object
<CustomObject>
    <description>This object has order list</description>
    <fields>
        <fullName>AOPS_Order_Number__c</fullName>
        <description>AOPS Order Number</description>
        <inlineHelpText>AOPS Order Number</inlineHelpText>
        <label>AOPS Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AOPS_Order_Status__c</fullName>
        <description>AOPS Order Status</description>
        <inlineHelpText>AOPS Order Status</inlineHelpText>
        <label>AOPS Order Status</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <label>Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aops_ID__c</fullName>
        <description>Aops ID for Tech Sales</description>
        <label>Aops ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Order_Validation_Message__c</fullName>
        <description>This is to capture B2B order validation message.</description>
        <inlineHelpText>This is to capture B2B order validation message.</inlineHelpText>
        <label>B2B Order Validation Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Address2__c</fullName>
        <description>Billing Address2 for Tech Sales</description>
        <label>Billing Address2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <description>Billing City for Tech Sales</description>
        <label>Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <description>Billing Country for Tech Sales</description>
        <label>Billing Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State_Province__c</fullName>
        <description>Billing State/Province for Sales Tech</description>
        <label>Billing State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <description>Billing Street for Tech Sales</description>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Postal_Code__c</fullName>
        <description>Billing Zip/Postal Code for Tech Sales</description>
        <label>Billing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CX_Incident_ID__c</fullName>
        <formula>text(Order_Case_ID__r.OracleCX_Id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CX Incident ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CX_Incident_Ref_Num__c</fullName>
        <formula>Order_Case_ID__r.OracleCX_Reference_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CX Incident Ref Num</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CX_Incident__c</fullName>
        <formula>text(Order_Case_ID__r.OracleCX_Id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CX Incident</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Message_To_SCM__c</fullName>
        <description>JSON message that was sent to SCM</description>
        <inlineHelpText>JSON message that was sent to SCM</inlineHelpText>
        <label>Item Message To SCM</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JSON_From_AOPS__c</fullName>
        <description>AOPS Order Validation/Status Message received asynchronously.</description>
        <inlineHelpText>AOPS Order Validation/Status Message received asynchronously.</inlineHelpText>
        <label>JSON From AOPS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <label>Opportunity ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Case_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order case Id for Tech Sales</description>
        <label>Order Case ID</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Orders Header</relationshipLabel>
        <relationshipName>Orders_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Payload_To_B2B__c</fullName>
        <description>This is the order payload sent to B2B to create Tech sales order in AOPS.</description>
        <inlineHelpText>This is the order payload sent to B2B to create Tech sales order in AOPS.</inlineHelpText>
        <label>Order Payload To B2B</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quote_ID__c</fullName>
        <label>Quote ID</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Order List</relationshipLabel>
        <relationshipName>Orders_Header</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Salesforce_Quote_ID__c</fullName>
        <label>Salesforce Quote ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Seq_Id__c</fullName>
        <description>Ship To Seq Id for Sales Tech</description>
        <label>Ship_To_Seq_Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address1__c</fullName>
        <description>Shipping Address1 for Tech Sales</description>
        <label>Shipping Address1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address2__c</fullName>
        <description>Shipping Address2 for Tech Sales</description>
        <label>Shipping Address2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <label>Shipping Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <description>Shipping City for Tech Sales</description>
        <label>Shipping City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <description>Shipping Country for Tech Sales</description>
        <label>Shipping Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Handling_Fee__c</fullName>
        <description>Shipping &amp; Handling Fee</description>
        <inlineHelpText>Shipping &amp; Handling Fee</inlineHelpText>
        <label>Shipping &amp; Handling Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipping_State_Province__c</fullName>
        <description>Shipping State/Province for Tech Sales</description>
        <label>Shipping State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street__c</fullName>
        <description>Shipping Street for Tech Sales</description>
        <label>Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Zip_Postal_Code__c</fullName>
        <description>Shipping Zip/Postal Code for Tech Sales</description>
        <label>Shipping Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Account_Number__c</fullName>
        <label>Vendor Account Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Email__c</fullName>
        <label>Vendor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Vendor_Quote_ID__c</fullName>
        <label>Vendor Quote ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ship_To_Aops_Seq_ID__c</fullName>
        <description>Ship To AOPS Seq Id</description>
        <inlineHelpText>Ship To AOPS Seq Id</inlineHelpText>
        <label>ship To Aops Seq ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Order Header</label>
    <nameField>
        <label>Order Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orders Header</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>